--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           // Browser doesn't support Geolocation
           alert("未允許或遭遇錯誤！");
       }
-      funtion getLocation(){
+      function getLocation(){
           navigator.geolocation.getCurrentPosition(function(position) {
               var pos = {
                   lat: position.coords.latitude,
@@ -84,8 +84,8 @@
                   map: map
               });
         };
-        setInterval(getLocation, 1000);
-  };
+      };
+      setInterval(getLocation, 10);
           </script>
         </header>
 
