--- a/index.html
+++ b/index.html
@@ -41,54 +41,58 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="map">
-          <script>
-          function initMap() {
-      var latlng = { lat: 25.046891, lng: 121.516602 }; // 給一個初始位置
-      var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15, //放大的倍率
-          center: latlng //初始化的地圖中心位置
-      });
-      var marker = new google.maps.Marker({
-          position: latlng,
-          map: map
-      });
-      
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-              var pos = {
-                  lat: position.coords.latitude,
-                  lng: position.coords.longitude
-              };
-              var marker = new google.maps.Marker({
-                  position: pos,
-                  
-                  map: map
-              });
-              map.setZoom(15);
-              map.setCenter(pos);
-          });
-      } else {
-          // Browser doesn't support Geolocation
-          alert("未允許或遭遇錯誤！");
-      }
-      function getLocation(){
-          navigator.geolocation.getCurrentPosition(function(position) {
-              var pos = {
-                  lat: position.coords.latitude,
-                  lng: position.coords.longitude
-              };
-              var marker = new google.maps.Marker({
-                  position: pos,
-                  map: map
-              });
-        });
-      };
-      setInterval(getLocation, 100);
-          </script>
-        </header>
+    <!-- Masthead-->
+    <header class="map">
+        <script>
+            function initMap() {
+                var latlng = {
+                    lat: 25.046891,
+                    lng: 121.516602
+                }; // 給一個初始位置
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 15, //放大的倍率
+                    center: latlng //初始化的地圖中心位置
+                });
+                var marker = new google.maps.Marker({
+                    position: latlng,
+                    map: map
+                });
 
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(function (position) {
+                        var pos = {
+                            lat: position.coords.latitude,
+                            lng: position.coords.longitude
+                        };
+                        var marker = new google.maps.Marker({
+                            position: pos,
+
+                            map: map
+                        });
+                        map.setZoom(15);
+                        map.setCenter(pos);
+                    });
+                } else {
+                    // Browser doesn't support Geolocation
+                    alert("未允許或遭遇錯誤！");
+                }
+            }
+
+            function getLocation() {
+                navigator.geolocation.getCurrentPosition(function (position) {
+                    var pos = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+                    var marker = new google.maps.Marker({
+                        position: pos,
+                        map: map
+                    });
+                });
+            };
+            setInterval(getLocation, 100);
+        </script>
+    </header>
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container px-4 px-lg-5">
